# hivebox

./: .dockerignore  .env  .env.example  .gitignore  .semgrepignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecards.yml
.husky/: commit-msg  pre-commit
.sonarlint/: connectedMode.json
app/: cache.py  main.py  metrics.py  storage.py  temperature.py  version.py
tests/: test_endpoints.py  test_metrics.py  test_storage_cache.py  test_temperature.py  test_temperature_edge_cases.py  test_version.py
